// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`message can work 1`] = `
Object {
  "components": Object {
    "schemas": Object {
      "message.Book": Object {
        "description": "An example resource type from AIP-123 used to test the behavior described in
the CreateBookRequest message.

See: https://google.aip.dev/123",
        "properties": Object {
          "id": Object {
            "description": "Output only. The book's ID.",
            "type": "string",
          },
          "name": Object {
            "description": "The resource name of the book.

Format: \`publishers/{publisher}/books/{book}\`

Example: \`publishers/1257894000000000000/books/my-book\`",
            "type": "string",
          },
        },
        "required": Array [],
        "type": "object",
      },
    },
  },
  "info": Object {
    "description": "",
    "title": "message",
    "version": "1",
  },
  "openapi": "3.0.0",
  "paths": Object {},
}
`;

exports[`message swagger v2 1`] = `
Object {
  "definitions": Object {
    "message.Book": Object {
      "description": "An example resource type from AIP-123 used to test the behavior described in
the CreateBookRequest message.

See: https://google.aip.dev/123",
      "properties": Object {
        "id": Object {
          "description": "Output only. The book's ID.",
          "type": "string",
        },
        "name": Object {
          "description": "The resource name of the book.

Format: \`publishers/{publisher}/books/{book}\`

Example: \`publishers/1257894000000000000/books/my-book\`",
          "type": "string",
        },
      },
      "required": Array [],
      "type": "object",
    },
  },
  "info": Object {
    "description": "",
    "title": "message",
    "version": "1",
  },
  "paths": Object {},
  "swagger": "2.0",
}
`;
